Fix: Cart Page Product Quantity Spacing Bug

--- a/src/views/CartPage/CartPage.scss
+++ b/src/views/CartPage/CartPage.scss
@@ -80,6 +80,7 @@
               margin-top: 75px;
 
               .product-quantity {
+                padding-right: 20px;
                 font-size: 15px;
               }
 
